# liuyao

./: .gitignore  README.md  buildozer.spec  liuyao.kv  main.py  pyproject.toml
.github/workflows/: main.yml  release.yml
ui/: change.py  main.py  sixyao.py  time.py  yao.py  zhouyi.py
utils/: __init__.py  calender.py  gua.py  zhouyi.json
