[project]
name = "liuyao"
version = "0.1.0"
description = "简单业余的六爻排盘工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kivy>=2.3.1",
    "tyme4py>=1.4.4",
]

[dependency-groups]
dev = [
    "buildozer>=1.5.0",
    "cython>=3.2.4",
    "pip>=26.0.1",
    "setuptools>=82.0.0",
]
